#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-10-06
2014-08-28 David Schneider
- Give new DgramReader argument default value for backward compatibility.
  New argument broke build with O2OTranslator

Tag: V00-10-05
2014-08-27 David Schneider
- add feature: jump to arbitrary offsets in xtc files before second event. 
  DgramReader takes new argument: firstEventAfterConfigure
  This percolates down to other classes in the package.
  New class XtcFilesPosition describes file offsets before second event.

Tag: V00-10-04
2014-08-08 David Schneider
- add file offset field to XtcInput::Dgram
- have psana record file offset for standard xtcinput (not indexing)
  presently information not used by other packages 
- change a declaration from char * to const char * to fix rhel6 warning

Tag: V00-10-03
2014-08-01 David Schneider
- discard L1Accept's that have 0x1FFFF as the fiducial. jira ticket PSAS-13
 
Tag: V00-10-02
2014-07-22 David Schneider
- add backward compatible XtcStreamDgIter constructor for package PSXtcQC
- also add backward compatiable DgramReader constructor - though doesn't 
  appear to be needed
	

Tag: V00-10-01
2014-07-18 David Schneider
- create artificial tag to try to bypass svn protect tags hook

Tag: V00-10-00
2014-07-18 David Schneider
- trac ticket:279 merge control and DAQ streams into the same event
  Introduce StreamDgram, keep track of L1Block number
  Introduce fiducial/second based comparisons
  Rework XtcStreamMerger
	
Tag: V00-09-13
2014-05-13 Christopher O'Grady
- add Dgram::operator< so indexing can sort non-event datagrams
  in time order

Tag: V00-09-11
2014-03-12 Igor Gaponenko