@@ -71,12 +71,12 @@ public:
    *  @param[in]  firstControlStream starting stream number for fiducial merge
    *  @param[in]  maxStreamClockDiffSec maximum difference between stream clocks in seconds
    *              should be <= 85 seconds.
-   *  @param[in]  firstEventAfterConfigure if non-null, offsets for second event
+   *  @param[in]  thirdEvent if non-null, offsets for second event
    */
   XtcStreamMerger(const boost::shared_ptr<StreamFileIterI>& streamIter,
                   double l1OffsetSec, int firstControlStream,
                   unsigned maxStreamClockDiffSec,
-                  boost::shared_ptr<XtcFilesPosition> firstEventAfterConfigure) ;
+                  boost::shared_ptr<XtcFilesPosition> thirdEvent) ;
 
   // Destructor
   ~XtcStreamMerger () ;
@@ -144,7 +144,7 @@ private:
   int32_t m_l1OffsetNsec ;                    ///< Time offset to add to non-L1Accept transitions (nanoseconds)
   int m_firstControlStream ;                  ///< starting stream number for control streams
   StreamDgramGreater m_streamDgramGreater;    ///< for comparing two dgrams in the priority queue
-  boost::shared_ptr<XtcFilesPosition> m_firstEventAfterConfigure; ///< if non-null, offsets for second event
+  boost::shared_ptr<XtcFilesPosition> m_thirdEvent; ///< if non-null, offsets for third event
 
   typedef std::priority_queue<StreamDgram, std::vector<StreamDgram>, StreamDgramGreater> OutputQueue;
   OutputQueue m_outputQueue;                  ///< Output queue for datagrams
